Added main articles concept using React

--- a/index.html
+++ b/index.html
@@ -46,16 +46,7 @@
       </header>
 
       <main>
-        <section>
-          <article>
-            <p>start</p>
-            <p>streaming</p>
-            <p>games</p>
-            <p>differently</p>
-          </article>
-          <article>test</article>
-          <article>test</article>
-        </section>
+        <section id="main-content"></section>
       </main>
 
       <div id="root"></div>
