--- a/index.html
+++ b/index.html
@@ -12,36 +12,25 @@
     <div class="page-container">
       <header>
         <nav class="navbar">
-          <ul class="nav-list">
-            <li class="nav-item left">
-              <a id="home" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item left">
-              <a href="/">Streams</a>
-            </li>
-            <li class="nav-item left">
-              <a href="/">Party</a>
-            </li>
-            <li class="nav-item left">
-              <a href="/">Premium</a>
-            </li>
-
-            <span class="logo">
-              <span class="widget-logo"></span>
-              <b>Gamor</b>
-            </span>
-
-            <label class="nav-item theme-label">
+          <span class="nav-items left">
+            <a id="home" href="/index.html">Home</a>
+            <a href="/">Streams</a>
+            <a href="/">Party</a>
+            <a href="/">Premium</a>
+          </span>
+          <span class="logo">
+            <span class="widget-logo"></span>
+            <b>Gamor</b>
+          </span>
+          <span class="nav-items right">
+            <label class="theme-label">
               <input id="theme" type="checkbox" />
               <span class="light-theme-label">Light theme</span>
               <span class="dark-theme-label">Dark theme</span>
             </label>
-
-            <li class="nav-item">
-              <a href="/src/pages/login.html">Sign in</a>
-            </li>
+            <a href="/src/pages/login.html">Sign in</a>
             <button class="btn-register">Create Account</button>
-          </ul>
+          </span>
         </nav>
       </header>
 
