Color correction && more declarative selectors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <nav class="navbar">
           <span class="nav-items left">
-            <a id="home" href="/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/">Streams</a>
             <a href="/">Party</a>
             <a href="/">Premium</a>
@@ -38,7 +38,6 @@
         <section id="main-content"></section>
       </main>
 
-      <div id="root"></div>
     </div>
   </body>
 
