--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
             <b>Gamor</b>
           </span>
           <span class="nav-items right">
-            <label class="theme-label">
-              <input id="theme" type="checkbox" />
-              <span class="light-theme-label">Light theme</span>
-              <span class="dark-theme-label">Dark theme</span>
-            </label>
+            <span id="scheme"></span>
             <a href="/src/pages/login.html">Sign in</a>
             <button class="btn-register">Create Account</button>
           </span>
@@ -37,11 +33,9 @@
       <main>
         <section id="main-content"></section>
       </main>
-
     </div>
   </body>
 
   <footer></footer>
   <script type="module" src="/src/main.jsx"></script>
-  <script type="module" src="/src/index.js"></script>
 </html>
