--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="page-container">
       <header>
         <nav class="navbar">
-          <span class="nav-items left">
+          <span class="nav-items nav-left">
             <a href="/index.html">Home</a>
-            <a href="/">Streams</a>
-            <a href="/">Party</a>
-            <a href="/">Premium</a>
+            <a href="/#">Streams</a>
+            <a href="/#">Party</a>
+            <a href="/#">Premium</a>
           </span>
           <span class="logo">
             <span class="widget-logo"></span>
@@ -38,4 +38,5 @@
 
   <footer></footer>
   <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/index.js"></script>
 </html>
