--- a/index.html
+++ b/index.html
@@ -7,36 +7,8 @@
     <link rel="stylesheet" href="src/index.css" />
     <title>Gamor Streaming Web</title>
   </head>
-
   <body>
-    <div class="page-container">
-      <header>
-        <nav class="navbar">
-          <span class="nav-items nav-left">
-            <a href="/index.html">Home</a>
-            <a href="/#">Streams</a>
-            <a href="/#">Party</a>
-            <a href="/#">Premium</a>
-          </span>
-          <span class="logo">
-            <span class="widget-logo"></span>
-            <b>Gamor</b>
-          </span>
-          <span class="nav-items right">
-            <span id="scheme"></span>
-            <a href="/src/pages/login.html">Sign in</a>
-            <button class="btn-register">Create Account</button>
-          </span>
-        </nav>
-      </header>
-
-      <main>
-        <section id="main-content"></section>
-      </main>
-    </div>
+    <div id="root"></div>
   </body>
-
-  <footer></footer>
   <script type="module" src="/src/main.jsx"></script>
-  <script type="module" src="/src/index.js"></script>
 </html>
